# vanille-strategie-site

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  audit-design-grok.md  audit-design-premium-maurice-signe-par-codex.md  audit-nouvelle-version-tunnel-premium-signe-par-codex.md  audit-tunnel-premium-final-grok.md  audit-tunnel-vent-grok.md  audit-tunnel-vente-hyper-premium-signe-par-codex.md  audit-tunnel-vente-hyper-premium-v2-signe-par-codex.md  client-experience-audit-vanille-strategie.md  design-audit-vanille-strategie.md  docker-compose.yml  funnel-audit-vanille-strategie.md  next.config.ts  package.json  pnpm-lock.yaml  seo-authority-audit-vanille-strategie.md  update-tunnel-premium-grok.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  passwords.py
backend/app/middleware/: antispam.py  rate_limit.py
backend/app/models/: auth.py  chatbot.py  clients_portal.py  companies.py  db_models.py  documents.py  dossiers.py  invoices.py  leads.py  messages.py  pipeline.py  tasks.py
backend/app/routers/: admin.py  auth.py  chatbot.py  clients_portal.py  companies.py  documents.py  dossiers.py  health.py  invoices.py  leads.py  messages.py  pipeline.py  social_proof.py  tasks.py
backend/app/services/: chatbot.py  clients_portal.py  dossiers.py  email.py  email_templates.py  enrich_companies.py  import_companies.py  invoices.py  leads.py  (+8 more)
backend/data/: companies_full.json  companies_new_categories.json  companies_scraped.json
backend/scripts/: seed.py
(+167 files in other folders)
